--- a/slider.html
+++ b/slider.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./slider.css">
   <script defer src="./slider.js"></script>
   <script defer src="https://kit.fontawesome.com/1bf5f3606a.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/png" href="./img-slider/icon/icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&display=swap" rel="stylesheet">
 </head>
